fixed bakground image shifting issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,7 @@ body {
     background-color: #ddd;
     width: 100%;
     min-height: 100vh;
-    /* border: 10px solid blue; */
+    overflow-y: scroll;
 }
 
 #root {
@@ -22,13 +22,22 @@ body {
     justify-content: flex-start;
     gap: 4em;
     min-height: 100vh;
+}
 
-    background-image: linear-gradient(
-            rgba(255, 255, 255, 0.6),
-            rgba(255, 255, 255, 0.6)
-        ),
-        url("/public/background_image.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+#background-img {
+    position: fixed;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    z-index: -1;
+}
+#background-img img {
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    min-width: 50%;
+    min-height: 50%;
+    opacity: 0.5;
+    background-repeat: repeat-y;
 }
